...
  }

  Widget _buildFab() {
    return Semantics(
      label: 'Create Note',
      hint: 'Create a new note',
      identifier: 'fab_create_note',
      child: GestureDetector(
        onTap: () {
          ScaffoldMessenger.of(context).clearSnackBars();
          Navigator.pushNamed(context, '/edit');
        },
        child: Container(
...
